objects/Object2__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Object2</label>
    <nameField>
        <label>Object2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>